--- a/_dev/css/theme.css
+++ b/_dev/css/theme.css
@@ -11,7 +11,14 @@ html {
 	width:100%;
 	height:100%;
 }
-h1,h2,h3,h4,h5,h6 {
+h1{
+	margin:0 0 35px;
+	text-transform:uppercase;
+	font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-weight:normal;
+	letter-spacing:1px;
+}
+h2,h3,h4,h5,h6 {
 	margin:0 0 35px;
 	text-transform:uppercase;
 	font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -30,15 +37,14 @@ p {
 		line-height:1.6;
 	}
 }
+
+
+
+
 .extra{
 	color: #1ba39c;
 }
-.projname{
-	padding-top: 20px;
-}
-.projdesc{
-	padding-bottom: 10px;
-}
+
 a {
 	color:inherit;
 	-webkit-transition:all .2s ease-in-out;
@@ -128,7 +134,91 @@ a:hover,a:focus {
 	padding:100px 0 100px 0;
 	text-align:center;
 	color:#fff;
-	background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.46),rgba(0,0,0,0.88)),url('../img/main/boardwstickers_bw.jpg');
+	background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.46),rgba(0,0,0,0.88)),url('../img/main/asset1.png');
+	-webkit-background-size:cover;
+	-moz-background-size:cover;
+	background-size:cover;
+	-o-background-size:cover;
+}
+
+
+.st {
+	display:table;
+	width:100%;
+	height:auto;
+	padding:100px 0 100px 0;
+	text-align:center;
+	color:#fff;
+	background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url('../img/st/background.jpg');
+	-webkit-background-size:cover;
+	-moz-background-size:cover;
+	background-size:cover;
+	-o-background-size:cover;
+}
+
+.projectdescription {
+	display:table;
+	width:100%;
+	height:auto;
+	padding:100px 0 100px 0;
+	text-align:center;
+	color:#000	;
+	-webkit-background-size:cover;
+	-moz-background-size:cover;
+	background-size:cover;
+	-o-background-size:cover;
+}
+
+.db {
+	display:table;
+	width:100%;
+	height:auto;
+	padding:100px 0 100px 0;
+	text-align:center;
+	color:#fff;
+	background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.46),rgba(0,0,0,0.88)),url('../img/db/bg.png');
+	-webkit-background-size:cover;
+	-moz-background-size:cover;
+	background-size:cover;
+	-o-background-size:cover;
+}
+
+.dbparallax{
+	/* The image used */
+    background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.46),rgba(0,0,0,0.88)),url('../img/db/bg.png');
+	-
+    /* Set a specific height */
+    min-height: 500px; 
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.aac {
+	display:table;
+	width:100%;
+	height:auto;
+	padding:100px 0 100px 0;
+	text-align:center;
+	color:#fff;
+	background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.46),rgba(0,0,0,0.88)),url('../img/aac/bg.png');
+	-webkit-background-size:cover;
+	-moz-background-size:cover;
+	background-size:cover;
+	-o-background-size:cover;
+}
+
+.icu {
+	display:table;
+	width:100%;
+	height:auto;
+	padding:100px 0 100px 0;
+	text-align:center;
+	color:#fff;
+	background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.46),rgba(0,0,0,0.88)),url('../img/icu/bg.png');
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
 	background-size:cover;
@@ -179,62 +269,15 @@ a:hover,a:focus {
     .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
       font-size: 22px; } }
 
-.bg-white{	background-color: white; }
 
-.st {
-	display:table;
-	width:100%;
-	height:auto;
-	padding:100px 0 100px 0;
-	text-align:center;
-	color:#fff;
-	background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url('../img/st/01.jpg');
-	-webkit-background-size:cover;
-	-moz-background-size:cover;
-	background-size:cover;
-	-o-background-size:cover;
+.project-title{
+	font-size:40px;
+	font-weight: normal;
 }
 
-.db {
-	display:table;
-	width:100%;
-	height:auto;
-	padding:100px 0 100px 0;
-	text-align:center;
-	color:#fff;
-	background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.46),rgba(0,0,0,0.88)),url('../img/dashboard/db01.png');
-	-webkit-background-size:cover;
-	-moz-background-size:cover;
-	background-size:cover;
-	-o-background-size:cover;
-}
-
-.aacsoft {
-	display:table;
-	width:100%;
-	height:auto;
-	padding:100px 0 100px 0;
-	text-align:center;
-	color:#fff;
-	background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.46),rgba(0,0,0,0.88)),url('../img/aac/01.png');
-	-webkit-background-size:cover;
-	-moz-background-size:cover;
-	background-size:cover;
-	-o-background-size:cover;
-}
-
-.icu {
-	display:table;
-	width:100%;
-	height:auto;
-	padding:100px 0 100px 0;
-	text-align:center;
-	color:#fff;
-	background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.46),rgba(0,0,0,0.88)),url('../img/icu/02.png');
-	-webkit-background-size:cover;
-	-moz-background-size:cover;
-	background-size:cover;
-	-o-background-size:cover;
+.project-description{
+	font-size:30px;
+	font-weight: normal;
 }
 
 .intro .intro-contact
@@ -269,6 +312,11 @@ a:hover,a:focus {
 			letter-spacing:3px;
 	}
 }
+
+.hlw{
+	color: #967ADC;
+}
+
 .btn-circle {
 	width:50px;
 	height:50px;
@@ -417,6 +465,47 @@ body {
 }
 .bgblue {
 	background:#22292c;
+}
+.bg-black {
+	background:#111;
+}
+
+.projname-black{
+	padding-top: 20px;
+	text-transform: none;
+	margin-bottom: 10px;
+	font-size: 1.4em;
+	font-weight:bold;
+	color:white;
+}
+.projdesc-black{
+	padding-bottom: 10px;
+	text-transform: none;
+	font-size:1.2em;
+	font-weight:normal;
+	color:white;
+}
+
+.bg-white{
+	background-color: white; 
+}
+
+.projname{
+	padding-top: 20px;
+	text-transform: none;
+	margin-bottom: 10px;
+	font-size: 1.4em;
+	font-weight:bold;
+}
+.projdesc{
+	padding-bottom: 10px;
+	text-transform: none;
+	font-size:1.2em;
+	font-weight:normal;
+}
+
+.circle-bg{
+	color:#967ADC;
 }
 .inlineblock {
 	display:inline-block;
