--- a/css/theme.css
+++ b/css/theme.css
@@ -162,7 +162,7 @@ a:hover,a:focus {
 	text-align:center;
 	color:#fff;
 	
-	background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url('../img/st/header.jpg');
+	background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.1),rgba(0,0,0,0.1)),url('../img/main/header.JPG');
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
 	background-size:cover;
