--- a/css/theme.css
+++ b/css/theme.css
@@ -174,6 +174,26 @@ a:hover,a:focus {
 	background-size: cover;
 }
 
+.contact {
+	display:table;
+	width:100%;
+	height:auto;
+	padding:100px 0 100px 0;
+	text-align:center;
+	color:#fff;
+	
+	background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.4),rgba(0,0,0,1.0)),url('../img/main/contact.JPG');
+	
+	min-height: 100%;
+
+	position: absolute;
+	opacity: 1.0;
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
 .kooktafelparallax{
 	display:table;
 	width:100%;
