fixing .JPG to .jpg

--- a/css/theme.css
+++ b/css/theme.css
@@ -182,7 +182,7 @@ a:hover,a:focus {
 	text-align:center;
 	color:#fff;
 	
-	background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.4),rgba(0,0,0,1.0)),url('../img/main/contact.JPG');
+	background-image:radial-gradient(circle at 50% 50%,rgba(0,0,0,0.4),rgba(0,0,0,1.0)),url('../img/main/contact.jpg');
 	
 	min-height: 100%;
 
