--- a/css/theme.css
+++ b/css/theme.css
@@ -270,6 +270,17 @@ a:hover,a:focus {
 	background-size: cover;
 }
 
+@media (max-width: 991px) {
+	.myvision {
+		padding-top: 4em;
+	}
+}
+
+@media (max-width: 767px){
+	.typewrite{
+		padding-top: 0em;
+	}
+}
 
 
 .portfolio-box {
