--- a/old/css/theme.css
+++ b/old/css/theme.css
@@ -42,7 +42,7 @@ h1{
 	margin:0 0 35px;
 	text-transform:uppercase;
 	font-family:Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-	font-weight:normal;
+	font-weight:700;
 	letter-spacing:1px;
 }
 h2,h3,h4,h5,h6 {
